# tstr_crates

./: Cargo.toml  changelog.md  readme.md
.github/workflows/: rust.yml
tstr/: Cargo.toml
tstr/src/: asserts.rs  for_examples.rs  for_tupled_reprs.rs  lib.rs  macros.rs  make_tstr.rs  p.rs  to_uint.rs  tstr.rs  tstr_cmp.rs  tstr_type.rs  utils.rs
tstr/src/for_tupled_reprs/: classify.rs  integers.rs
tstr/src/macros/: cmp_macros.rs
tstr/src/to_uint/: impl_no_const_generics.rs
tstr/src/tstr_cmp/: impl_no_const_generics.rs
tstr/tests/: modules_.rs
tstr/tests/modules/: alias_and_tuples.rs  concat_args.rs  long_strings.rs  other_args.rs  string_args.rs  string_cmp.rs  to_uint.rs  utils.rs
tstr_proc_macros/: Cargo.toml
tstr_proc_macros/src/: lib.rs  lit_parsing.rs  min_const_generics.rs  nested_tuple_compute.rs  no_const_generics.rs  non_syn_parsing.rs  use_syn.rs  utils.rs
tstr_proc_macros/src/nested_tuple_compute/: tests.rs
