[package]
name = "tstr"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Type-level strings"
documentation = "https://docs.rs/tstr_proc_macros/"
keywords = []
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/tstr_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../LICENSE-ZLIB.md", 
    "../readme.md", 
]

[features]
const_generics = ["tstr_proc_macros/const_generics"]
nightly_const_generics = ["const_generics"]

[dependencies]
tstr_proc_macros = {version = "0.1.0", path = "../tstr_proc_macros"}