[package]
name = "tstr"
version = "0.2.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Type-level strings"
readme="../readme.md"
documentation = "https://docs.rs/tstr_proc_macros/"
keywords = []
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/tstr_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../LICENSE-ZLIB.md", 
    "../readme.md", 
]

[features]
min_const_generics = ["tstr_proc_macros/min_const_generics"]

const_generics = ["tstr_proc_macros/const_generics", "min_const_generics"]
nightly_const_generics = ["const_generics"]

use_syn = ["tstr_proc_macros/syn_"]
for_examples = []

# private features
docsrs = ["for_examples"]

[dependencies.tstr_proc_macros]
version = "0.2.0"
path = "../tstr_proc_macros"

[package.metadata.docs.rs]
features = ["docsrs", "nightly_const_generics"]






