[package]
name = "tstr_proc_macros"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Implementation detail of tstr."
documentation = "https://docs.rs/tstr_proc_macros/"
keywords = []
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/tstr_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../LICENSE-ZLIB.md", 
]

[lib]
proc-macro = true

[features]
default = []
syn_ = ["syn", "proc_macro2_"]
proc_macro2_ = ["proc-macro2"]

const_generics = []

[dependencies]
proc-macro2 = {version = "1.0", optional = true}

[dependencies.syn]
version = "1.0.38"
default_features = false
features = ["parsing"]
optional = true
